# garbitrary

./: README  garbitrary.cabal
src/: Test.hs
src/Generics/SingleRec/: Arbitrary.hs  Base.hs  Fixpoints.hs
